--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.3",
+    "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.10",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.0.5",
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
-    "autoprefixer": "^10.0.2",
-    "postcss": "^8.1.10",
-    "tailwindcss": "^2.0.1",
-    "typescript": "^4.1.2"
+    "autoprefixer": "^10.2.3",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3",
+    "strip-bom-stream": "^4.0.0"
   }
 }
