--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx cross-env ANALYSE=true next build",
     "start": "next start"
   },
   "dependencies": {
@@ -14,13 +14,17 @@
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
+    "@next/bundle-analyzer": "^10.0.5",
     "@next/mdx": "^10.0.5",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "autoprefixer": "^10.2.3",
+    "cross-env": "^7.0.3",
     "postcss": "^8.2.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "strip-bom-stream": "^4.0.0",
     "tailwindcss": "^2.0.2",
-    "typescript": "^4.1.3",
-    "strip-bom-stream": "^4.0.0"
+    "typescript": "^4.1.3"
   }
 }
