:memo: Rename project "Prava" to "Praca"

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "prava-website",
+  "name": "praca-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "npx cross-env ANALYSE=true next build",
     "start": "next start",
-    "docker:build": "git describe --tags --always | xargs -I {} docker image build -f Dockerfile -t prava/website:{} .",
-    "docker:tag": "git describe --tags --always | xargs -I {} docker image tag prava/website:{} prava/website:latest",
-    "docker:run": "docker run -p 3000:3000 prava/website:latest",
+    "docker:build": "git describe --tags --always | xargs -I {} docker image build -f Dockerfile -t praca/website:{} .",
+    "docker:tag": "git describe --tags --always | xargs -I {} docker image tag praca/website:{} praca/website:latest",
+    "docker:run": "docker run -p 3000:3000 praca/website:latest",
     "docker": "yarn docker:build && yarn docker:tag && yarn docker:run"
   },
   "dependencies": {
