:truck: Move all source code files into own "./src/" folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ],
+      "~/*": [
+        "./*"
+      ]
     },
   },
   "include": [
