--- a/package.json
+++ b/package.json
@@ -13,26 +13,34 @@
     "docker": "yarn docker:build && yarn docker:tag && yarn docker:run"
   },
   "dependencies": {
-    "next": "10.0.5",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "next-svgr": "^0.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "10.0.6",
+    "react-dom": "17.0.1",
+    "react": "17.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@emotion/babel-plugin": "^11.1.2",
     "@fec/remark-a11y-emoji": "^3.0.0",
     "@mdx-js/loader": "^1.6.22",
     "@next/bundle-analyzer": "^10.0.5",
     "@next/mdx": "^10.0.6",
+    "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "autoprefixer": "^10.2.3",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "autoprefixer": "^10.2.4",
+    "babel-plugin-macros": "^3.0.1",
     "cross-env": "^7.0.3",
-    "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
+    "postcss": "^8.2.4",
     "strip-bom-stream": "^4.0.0",
     "tailwindcss": "^2.0.2",
+    "twin.macro": "^2.2.0",
     "typescript": "^4.1.3"
   }
 }
