--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "private": true,
   "author": "pierreyoda <pierreyoda@users.noreply.github.com>",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npx next dev",
     "build": "npx cross-env ANALYSE=true next build",
-    "start": "next start",
+    "start": "npx next start",
     "docker:build": "git describe --tags --always | xargs -I {} docker image build -f Dockerfile -t praca/website:{} .",
     "docker:tag": "git describe --tags --always | xargs -I {} docker image tag praca/website:{} praca/website:latest",
     "docker:run": "docker run -p 3000:3000 praca/website:latest",
-    "docker": "yarn docker:build && yarn docker:tag && yarn docker:run"
+    "docker": "yarn docker:build && yarn docker:tag && yarn docker:run",
+    "lint": "npx eslint . --ext js --ext ts --ext tsx",
+    "lint:fix": "yarn lint --fix",
+    "format": "npx pretty-quick"
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
-    "next-svgr": "^0.0.2",
     "next": "10.0.6",
-    "react-dom": "17.0.1",
-    "react": "17.0.1"
+    "next-svgr": "^0.0.2",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
@@ -32,12 +35,23 @@
     "@tailwindcss/typography": "^0.4.0",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "autoprefixer": "^10.2.4",
     "babel-plugin-macros": "^3.0.1",
     "cross-env": "^7.0.3",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.22.0",
+    "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
-    "postcss": "^8.2.4",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "strip-bom-stream": "^4.0.0",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.2.0",
