--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "docker": "yarn docker:build && yarn docker:tag && yarn docker:run",
     "lint": "npx eslint . --ext js --ext ts --ext tsx",
     "lint:fix": "yarn lint --fix",
-    "format": "npx pretty-quick"
+    "format": "npx pretty-quick",
+    "postinstall": "npx husky install"
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
@@ -47,6 +48,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.22.0",
+    "husky": "^5.0.8",
     "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
