--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/bundle-analyzer": "^10.0.5",
     "@next/mdx": "^10.0.6",
+    "@octokit/rest": "^18.1.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
     "@types/node": "^14.14.25",
@@ -41,6 +42,7 @@
     "autoprefixer": "^10.2.4",
     "babel-plugin-macros": "^3.0.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
