--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "author": "pierreyoda <pierreyoda@users.noreply.github.com>",
   "scripts": {
+    "fetch:projects": "npx cross-env DEBUG=praca:* npx ts-node --project tsconfig.node.json ./src/api/github/main.ts",
+    "fetch": "yarn fetch:projects",
     "dev": "npx next dev",
     "build": "npx cross-env ANALYSE=true next build",
     "start": "npx next start",
@@ -20,10 +22,16 @@
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@reduxjs/toolkit": "^1.5.0",
+    "debug": "^4.3.1",
+    "lodash.orderby": "^4.6.0",
     "next": "10.0.6",
+    "next-redux-wrapper": "7.0.0-rc.1",
     "next-svgr": "^0.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
@@ -35,8 +43,11 @@
     "@octokit/rest": "^18.1.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
+    "@types/debug": "^4.1.5",
+    "@types/lodash.orderby": "^4.6.6",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "autoprefixer": "^10.2.4",
@@ -58,6 +69,7 @@
     "pretty-quick": "^3.1.0",
     "strip-bom-stream": "^4.0.0",
     "tailwindcss": "^2.0.2",
+    "ts-node": "^9.1.1",
     "twin.macro": "^2.2.0",
     "typescript": "^4.1.3"
   }
