--- a/package.json
+++ b/package.json
@@ -19,58 +19,58 @@
     "postinstall": "npx husky install"
   },
   "dependencies": {
-    "@emotion/css": "^11.1.3",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
-    "@reduxjs/toolkit": "^1.5.0",
-    "debug": "^4.3.1",
-    "lodash.orderby": "^4.6.0",
+    "@emotion/css": "11.1.3",
+    "@emotion/react": "11.1.5",
+    "@emotion/styled": "11.1.5",
+    "@reduxjs/toolkit": "1.5.0",
+    "debug": "4.3.1",
+    "lodash.orderby": "4.6.0",
     "next": "10.0.6",
     "next-redux-wrapper": "7.0.0-rc.1",
-    "next-svgr": "^0.0.2",
+    "next-svgr": "0.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "react-redux": "7.2.2",
+    "redux": "4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@emotion/babel-plugin": "^11.1.2",
-    "@fec/remark-a11y-emoji": "^3.0.0",
-    "@mdx-js/loader": "^1.6.22",
-    "@next/bundle-analyzer": "^10.0.5",
-    "@next/mdx": "^10.0.6",
-    "@octokit/rest": "^18.1.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.4.0",
-    "@types/debug": "^4.1.5",
-    "@types/lodash.orderby": "^4.6.6",
-    "@types/node": "^14.14.25",
-    "@types/react": "^17.0.1",
-    "@types/react-redux": "^7.1.16",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "autoprefixer": "^10.2.4",
-    "babel-plugin-macros": "^3.0.1",
-    "cross-env": "^7.0.3",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.22.0",
-    "husky": "^5.0.8",
-    "postcss": "^8.2.4",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "strip-bom-stream": "^4.0.0",
-    "tailwindcss": "^2.0.2",
-    "ts-node": "^9.1.1",
-    "twin.macro": "^2.2.0",
-    "typescript": "^4.1.3"
+    "@babel/core": "7.12.13",
+    "@emotion/babel-plugin": "11.1.2",
+    "@fec/remark-a11y-emoji": "3.0.0",
+    "@mdx-js/loader": "1.6.22",
+    "@next/bundle-analyzer": "10.0.6",
+    "@next/mdx": "10.0.6",
+    "@octokit/rest": "18.1.0",
+    "@tailwindcss/forms": "0.2.1",
+    "@tailwindcss/typography": "0.4.0",
+    "@types/debug": "4.1.5",
+    "@types/lodash.orderby": "4.6.6",
+    "@types/node": "14.14.25",
+    "@types/react": "17.0.1",
+    "@types/react-redux": "7.1.16",
+    "@typescript-eslint/eslint-plugin": "4.14.2",
+    "@typescript-eslint/parser": "4.14.2",
+    "autoprefixer": "10.2.4",
+    "babel-plugin-macros": "3.0.1",
+    "cross-env": "7.0.3",
+    "dotenv": "8.2.0",
+    "eslint": "7.19.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.22.0",
+    "husky": "5.0.8",
+    "postcss": "8.2.5",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-preset-env": "6.7.0",
+    "prettier": "2.2.1",
+    "pretty-quick": "3.1.0",
+    "strip-bom-stream": "4.0.0",
+    "tailwindcss": "2.0.3",
+    "ts-node": "9.1.1",
+    "twin.macro": "2.2.2",
+    "typescript": "4.1.3"
   }
 }
