--- a/package.json
+++ b/package.json
@@ -25,53 +25,57 @@
     "@reduxjs/toolkit": "1.5.0",
     "debug": "4.3.1",
     "lodash.orderby": "4.6.0",
-    "next": "10.0.6",
-    "next-redux-wrapper": "7.0.0-rc.1",
+    "next": "10.0.9",
+    "next-redux-wrapper": "6.0.2",
     "next-svgr": "0.0.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-redux": "7.2.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.3",
     "redux": "4.0.5"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
-    "@emotion/babel-plugin": "11.1.2",
-    "@fec/remark-a11y-emoji": "3.0.0",
+    "@babel/core": "7.13.10",
+    "@emotion/babel-plugin": "11.2.0",
+    "@fec/remark-a11y-emoji": "3.1.0",
     "@mdx-js/loader": "1.6.22",
-    "@next/bundle-analyzer": "10.0.6",
-    "@next/mdx": "10.0.6",
-    "@octokit/rest": "18.1.0",
+    "@next/bundle-analyzer": "10.0.9",
+    "@next/mdx": "10.0.9",
+    "@octokit/rest": "18.3.5",
     "@tailwindcss/forms": "0.2.1",
     "@tailwindcss/typography": "0.4.0",
     "@types/debug": "4.1.5",
     "@types/lodash.orderby": "4.6.6",
-    "@types/node": "14.14.25",
-    "@types/react": "17.0.1",
+    "@types/node": "14.14.35",
+    "@types/react": "17.0.3",
     "@types/react-redux": "7.1.16",
-    "@typescript-eslint/eslint-plugin": "4.15.0",
-    "@typescript-eslint/parser": "4.15.0",
-    "autoprefixer": "10.2.4",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
+    "autoprefixer": "10.2.5",
     "babel-plugin-macros": "3.0.1",
     "chalk": "^4.1.0",
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
-    "eslint": "7.19.0",
-    "eslint-config-prettier": "7.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.3.1",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.22.0",
-    "husky": "5.0.9",
-    "postcss": "8.2.5",
+    "eslint-plugin-promise": "4.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "5.2.0",
+    "postcss": "8.2.8",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-preset-env": "6.7.0",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
     "strip-bom-stream": "4.0.0",
-    "tailwindcss": "2.0.3",
+    "tailwindcss": "2.0.4",
     "ts-node": "9.1.1",
-    "twin.macro": "2.2.2",
-    "typescript": "4.1.3"
+    "twin.macro": "2.3.1",
+    "typescript": "4.2.3"
   }
 }
