--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
     "debug": "4.3.1",
     "lodash.orderby": "4.6.0",
     "next": "10.0.9",
+    "next-mdx-remote": "^2.1.3",
     "next-redux-wrapper": "6.0.2",
     "next-svgr": "0.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.3",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "remark-emoji": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
     "@emotion/babel-plugin": "11.2.0",
     "@fec/remark-a11y-emoji": "3.1.0",
-    "@mdx-js/loader": "1.6.22",
     "@next/bundle-analyzer": "10.0.9",
-    "@next/mdx": "10.0.9",
     "@octokit/rest": "18.3.5",
     "@tailwindcss/forms": "0.2.1",
     "@tailwindcss/typography": "0.4.0",
