:recycle: Replace Redux store by JSON loading, ContentPanel on home page

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,9 +39,11 @@
     "@typescript-eslint/no-unused-expressions": ["off"],
     "@typescript-eslint/no-var-requires": ["off"],
     "@typescript-eslint/no-use-before-define": ["off"],
+    "react/jsx-one-expression-per-line": ["off"],
     "react/jsx-props-no-spreading": ["off"],
     "import/extensions": ["off"],
     "import/no-extraneous-dependencies": ["off"],
+    "import/prefer-default-export": ["off"],
     "arrow-parens": ["off"],
     "comma-dangle": ["error", "always-multiline"],
     "implicit-arrow-linebreak": "off",
