--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fetch:projects": "npx cross-env DEBUG=praca:* npx ts-node --project tsconfig.node.json ./src/api/fetcher.ts",
     "fetch": "yarn fetch:projects",
     "dev": "npx next dev",
-    "build": "npx cross-env ANALYSE=true next build",
+    "build": "yarn fetch && npx cross-env ANALYSE=true next build",
     "start": "npx next start",
     "docker:build": "git describe --tags --always | xargs -I {} docker image build -f Dockerfile -t praca/website:{} .",
     "docker:tag": "git describe --tags --always | xargs -I {} docker image tag praca/website:{} praca/website:latest",
@@ -22,17 +22,13 @@
     "@emotion/css": "11.1.3",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
-    "@reduxjs/toolkit": "1.5.0",
     "debug": "4.3.1",
     "lodash.orderby": "4.6.0",
     "next": "10.0.9",
     "next-mdx-remote": "^2.1.3",
-    "next-redux-wrapper": "6.0.2",
     "next-svgr": "0.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.3",
-    "redux": "4.0.5",
     "remark-emoji": "^2.1.0"
   },
   "devDependencies": {
@@ -47,7 +43,6 @@
     "@types/lodash.orderby": "4.6.6",
     "@types/node": "14.14.35",
     "@types/react": "17.0.3",
-    "@types/react-redux": "7.1.16",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
     "autoprefixer": "10.2.5",
