--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "10.0.9",
     "next-mdx-remote": "^2.1.3",
     "next-svgr": "0.0.2",
+    "node-emoji": "^1.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark-emoji": "^2.1.0"
@@ -42,6 +43,7 @@
     "@types/debug": "4.1.5",
     "@types/lodash.orderby": "4.6.6",
     "@types/node": "14.14.35",
+    "@types/node-emoji": "^1.8.1",
     "@types/react": "17.0.3",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
