--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "postinstall": "npx husky install"
   },
   "dependencies": {
-    "@emotion/css": "11.1.3",
-    "@emotion/react": "11.1.5",
-    "@emotion/styled": "11.1.5",
+    "clsx": "^1.1.1",
     "debug": "4.3.1",
     "lodash.orderby": "4.6.0",
     "next": "10.0.9",
@@ -34,7 +32,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
-    "@emotion/babel-plugin": "11.2.0",
     "@fec/remark-a11y-emoji": "3.1.0",
     "@next/bundle-analyzer": "10.0.9",
     "@octokit/rest": "18.4.0",
@@ -48,7 +45,6 @@
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
     "autoprefixer": "10.2.5",
-    "babel-plugin-macros": "3.0.1",
     "chalk": "^4.1.0",
     "cross-env": "7.0.3",
     "dotenv": "8.2.0",
@@ -69,10 +65,10 @@
     "postcss-preset-env": "6.7.0",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
+    "sass": "^1.32.8",
     "strip-bom-stream": "4.0.0",
     "tailwindcss": "2.0.4",
     "ts-node": "9.1.1",
-    "twin.macro": "2.3.1",
     "typescript": "4.2.3"
   }
 }
