--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "node-emoji": "^1.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "remark-emoji": "^2.2.0"
+    "remark-emoji": "^2.2.0",
+    "remark-shiki-twoslash": "^1.0.3",
+    "shiki-twoslash": "^1.2.7"
   },
   "devDependencies": {
     "@babel/core": "7.13.15",
