--- a/package.json
+++ b/package.json
@@ -19,57 +19,57 @@
     "postinstall": "npx husky install"
   },
   "dependencies": {
-    "clsx": "^1.1.1",
+    "clsx": "1.1.1",
     "debug": "4.3.1",
     "lodash.orderby": "4.6.0",
-    "next": "10.2.0",
-    "next-mdx-remote": "^3.0.1",
+    "next": "11.0.0",
+    "next-mdx-remote": "3.0.2",
     "next-svgr": "0.0.2",
-    "node-emoji": "^1.10.0",
+    "node-emoji": "1.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "remark-emoji": "^2.2.0",
-    "remark-shiki-twoslash": "^1.0.3",
-    "shiki-twoslash": "^1.2.7"
+    "remark-emoji": "2.2.0",
+    "remark-shiki-twoslash": "1.4.4",
+    "shiki-twoslash": "1.4.3"
   },
   "devDependencies": {
-    "@babel/core": "7.14.2",
+    "@babel/core": "7.14.6",
     "@fec/remark-a11y-emoji": "3.1.0",
-    "@next/bundle-analyzer": "10.2.0",
-    "@octokit/rest": "18.5.3",
-    "@tailwindcss/typography": "0.4.0",
+    "@next/bundle-analyzer": "11.0.0",
+    "@octokit/rest": "18.6.0",
+    "@tailwindcss/typography": "0.4.1",
     "@types/debug": "4.1.5",
     "@types/lodash.orderby": "4.6.6",
-    "@types/node": "15.0.3",
-    "@types/node-emoji": "^1.8.1",
-    "@types/react": "17.0.5",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
-    "autoprefixer": "10.2.5",
-    "chalk": "^4.1.1",
+    "@types/node": "15.12.4",
+    "@types/node-emoji": "1.8.1",
+    "@types/react": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "4.28.0",
+    "@typescript-eslint/parser": "4.28.0",
+    "autoprefixer": "10.2.6",
+    "chalk": "4.1.1",
     "cross-env": "7.0.3",
-    "dotenv": "9.0.2",
-    "eslint": "7.26.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "dotenv": "10.0.0",
+    "eslint": "7.29.0",
+    "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "husky": "6.0.0",
-    "postcss": "8.2.15",
+    "postcss": "8.3.5",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-preset-env": "6.7.0",
-    "prettier": "2.3.0",
-    "pretty-quick": "3.1.0",
-    "sass": "^1.32.13",
+    "prettier": "2.3.1",
+    "pretty-quick": "3.1.1",
+    "sass": "1.35.1",
     "strip-bom-stream": "4.0.0",
-    "tailwindcss": "2.1.2",
-    "ts-node": "9.1.1",
-    "typescript": "4.2.4"
+    "tailwindcss": "2.2.2",
+    "ts-node": "10.0.0",
+    "typescript": "4.3.4"
   }
 }
