--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,9 @@
     "airbnb",
     "airbnb/hooks",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "next",
+    "next/core-web-vitals"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -55,6 +57,7 @@
     "no-undef": ["error"],
     "no-var": ["error"],
     "object-curly-spacing": ["error", "always"],
+    "operator-linebreak": ["off"],
     "quotes": [
       "error",
       "double",
