--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv": "10.0.0",
     "eslint": "7.29.0",
     "eslint-config-airbnb": "18.2.1",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.4.0",
     "eslint-plugin-import": "2.23.4",
