--- a/.eslintrc
+++ b/.eslintrc
@@ -56,6 +56,7 @@
     "no-nested-ternary": ["off"],
     "no-undef": ["error"],
     "no-var": ["error"],
+    "object-curly-newline": ["off"],
     "object-curly-spacing": ["error", "always"],
     "operator-linebreak": ["off"],
     "quotes": [
