:construction: WIP SvelteKit rewrite

--- a/package.json
+++ b/package.json
@@ -3,74 +3,55 @@
   "version": "0.1.0",
   "private": true,
   "author": "pierreyoda <pierreyoda@users.noreply.github.com>",
+  "type": "module",
   "scripts": {
     "fetch:projects": "npx cross-env DEBUG=praca:* npx ts-node --project tsconfig.node.json ./src/api/fetcher.ts",
     "fetch": "yarn fetch:projects",
-    "dev": "npx next dev",
-    "build": "yarn fetch && npx cross-env ANALYSE=true next build",
-    "start": "npx next start",
-    "docker:build": "git describe --tags --always | xargs -I {} docker image build -f Dockerfile -t praca/website:{} .",
-    "docker:tag": "git describe --tags --always | xargs -I {} docker image tag praca/website:{} praca/website:latest",
-    "docker:run": "docker run -p 3000:3000 praca/website:latest",
-    "docker": "yarn docker:build && yarn docker:tag && yarn docker:run",
-    "lint": "npx eslint . --ext js --ext ts --ext tsx",
-    "lint:fix": "yarn lint --fix",
-    "format": "npx pretty-quick",
-    "postinstall": "npx husky install"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+    "test": "yarn jest"
   },
   "dependencies": {
-    "clsx": "1.1.1",
     "debug": "4.3.2",
     "lodash.orderby": "4.6.0",
-    "next": "11.1.0",
-    "next-mdx-remote": "3.0.4",
-    "next-svgr": "0.0.2",
-    "node-emoji": "1.11.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "remark-emoji": "3.0.1",
-    "remark-shiki-twoslash": "3.0.2",
-    "shiki-twoslash": "3.0.0"
+    "node-emoji": "1.11.0"
   },
   "devDependencies": {
-    "@babel/core": "7.15.0",
-    "@fec/remark-a11y-emoji": "3.1.0",
-    "@next/bundle-analyzer": "11.1.0",
-    "@octokit/rest": "18.9.1",
+    "@octokit/rest": "18.12.0",
+    "@sveltejs/kit": "next",
     "@tailwindcss/typography": "0.4.1",
     "@types/debug": "4.1.7",
     "@types/lodash.orderby": "4.6.6",
-    "@types/node": "16.6.1",
     "@types/node-emoji": "1.8.1",
-    "@types/react": "17.0.18",
-    "@typescript-eslint/eslint-plugin": "4.29.2",
-    "@typescript-eslint/parser": "4.29.2",
-    "autoprefixer": "10.3.1",
+    "@types/node": "16.11.10",
+    "@types/tailwindcss": "2.2.4",
+    "@typescript-eslint/eslint-plugin": "5.4.0",
+    "@typescript-eslint/parser": "5.4.0",
+    "autoprefixer": "10.4.0",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
+    "cssnano": "5.0.11",
     "dotenv": "10.0.0",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-next": "^11.1.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-typescript": "2.4.0",
-    "eslint-plugin-import": "2.24.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "7.0.1",
-    "postcss": "8.3.6",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-preset-env": "6.7.0",
-    "prettier": "2.3.2",
-    "pretty-quick": "3.1.1",
-    "sass": "1.38.0",
-    "strip-bom-stream": "5.0.0",
-    "tailwindcss": "2.2.7",
-    "ts-node": "10.2.1",
-    "typescript": "4.3.5"
+    "eslint-plugin-svelte3": "3.2.1",
+    "eslint": "8.3.0",
+    "husky": "7.0.4",
+    "postcss-load-config": "3.1.0",
+    "postcss-nested": "5.0.6",
+    "postcss": "8.4.1",
+    "prettier-plugin-svelte": "2.5.0",
+    "prettier": "2.4.1",
+    "svelte-check": "2.2.10",
+    "svelte-preprocess": "4.9.8",
+    "svelte": "3.44.2",
+    "tailwindcss": "2.2.19",
+    "ts-node": "10.4.0",
+    "tslib": "2.3.1",
+    "typescript": "4.5.2"
   }
 }
