:bug: Fix ts-node usage in "fetch:projects" command

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,16 +11,9 @@
     "esModuleInterop": true,
     "downlevelIteration": true,
     "moduleResolution": "node",
+    "module": "ESNext",
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ],
-      "~/*": [
-        "./*"
-      ]
-    }
+    "baseUrl": "."
   },
   "exclude": [
     "node_modules"
