--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "pierreyoda <pierreyoda@users.noreply.github.com>",
   "type": "module",
   "scripts": {
-    "fetch:projects": "npx cross-env DEBUG=praca:* npx ts-node --project tsconfig.node.json ./src/api/fetcher.ts",
+    "fetch:projects": "yarn cross-env DEBUG=praca:* TS_NODE_PROJECT=./tsconfig.node.json yarn node --experimental-specifier-resolution=node --loader ts-node/esm ./src/api/fetcher.ts",
     "fetch": "yarn fetch:projects",
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
