--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@tailwindcss/typography": "0.4.1",
     "@types/debug": "4.1.7",
     "@types/lodash.orderby": "4.6.6",
-    "@types/node-emoji": "1.8.1",
     "@types/node": "16.11.10",
+    "@types/node-emoji": "1.8.1",
     "@types/tailwindcss": "2.2.4",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
@@ -37,18 +37,20 @@
     "cross-env": "7.0.3",
     "cssnano": "5.0.11",
     "dotenv": "10.0.0",
+    "eslint": "8.3.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-svelte3": "3.2.1",
-    "eslint": "8.3.0",
     "husky": "7.0.4",
+    "mdsvex": "^0.9.8",
+    "postcss": "8.4.1",
     "postcss-load-config": "3.1.0",
     "postcss-nested": "5.0.6",
-    "postcss": "8.4.1",
-    "prettier-plugin-svelte": "2.5.0",
     "prettier": "2.4.1",
+    "prettier-plugin-svelte": "2.5.0",
+    "remark-emoji": "^3.0.2",
+    "svelte": "3.44.2",
     "svelte-check": "2.2.10",
     "svelte-preprocess": "4.9.8",
-    "svelte": "3.44.2",
     "tailwindcss": "2.2.19",
     "ts-node": "10.4.0",
     "tslib": "2.3.1",
