--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "dependencies": {
     "debug": "4.3.2",
     "lodash.orderby": "4.6.0",
-    "node-emoji": "1.11.0"
+    "node-emoji": "^1.11.0"
   },
   "devDependencies": {
     "@octokit/rest": "18.12.0",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.31",
     "@sveltejs/kit": "next",
     "@tailwindcss/typography": "0.4.1",
     "@types/debug": "4.1.7",
