--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "dependencies": {
     "debug": "4.3.2",
     "lodash.orderby": "4.6.0",
-    "node-emoji": "^1.11.0"
+    "node-emoji": "1.11.0"
   },
   "devDependencies": {
     "@octokit/rest": "18.12.0",
-    "@sveltejs/adapter-vercel": "^1.0.0-next.31",
+    "@sveltejs/adapter-vercel": "1.0.0-next.31",
     "@sveltejs/kit": "next",
     "@tailwindcss/typography": "0.4.1",
     "@types/debug": "4.1.7",
@@ -42,13 +42,13 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-svelte3": "3.2.1",
     "husky": "7.0.4",
-    "mdsvex": "^0.9.8",
-    "postcss": "8.4.1",
+    "mdsvex": "0.9.8",
+    "postcss": "8.4.3",
     "postcss-load-config": "3.1.0",
     "postcss-nested": "5.0.6",
-    "prettier": "2.4.1",
+    "prettier": "2.5.0",
     "prettier-plugin-svelte": "2.5.0",
-    "remark-emoji": "^3.0.2",
+    "remark-emoji": "3.0.2",
     "svelte": "3.44.2",
     "svelte-check": "2.2.10",
     "svelte-preprocess": "4.9.8",
