--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "svelte": "3.44.2",
     "svelte-check": "2.2.10",
     "svelte-preprocess": "4.9.8",
+    "svelte-range-slider-pips": "^2.0.0",
     "tailwindcss": "2.2.19",
     "ts-jest": "^27.0.7",
     "ts-node": "10.4.0",
