:construction: WIP Chip8 Typescript virtual machine for future blog post

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "checkJs": true,
+    "strict": true,
     "paths": {
       "$lib": ["src/lib"],
       "$lib/*": ["src/lib/*"]
