--- a/package.json
+++ b/package.json
@@ -25,41 +25,41 @@
   },
   "devDependencies": {
     "@octokit/rest": "18.12.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.22",
-    "@sveltejs/kit": "1.0.0-next.201",
+    "@sveltejs/adapter-static": "1.0.0-next.26",
+    "@sveltejs/kit": "1.0.0-next.227",
     "@tailwindcss/typography": "0.5.0",
     "@types/d3-path": "3.0.0",
     "@types/d3-selection": "3.0.2",
     "@types/debug": "4.1.7",
-    "@types/jest": "27.0.3",
+    "@types/jest": "27.4.0",
     "@types/lodash.orderby": "4.6.6",
-    "@types/node": "17.0.4",
+    "@types/node": "17.0.8",
     "@types/node-emoji": "1.8.1",
-    "@types/tailwindcss": "2.2.4",
-    "@typescript-eslint/eslint-plugin": "5.8.0",
-    "@typescript-eslint/parser": "5.6.0",
-    "autoprefixer": "10.4.0",
+    "@types/tailwindcss": "3.0.2",
+    "@typescript-eslint/eslint-plugin": "5.9.1",
+    "@typescript-eslint/parser": "5.9.1",
+    "autoprefixer": "10.4.2",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
-    "cssnano": "5.0.14",
-    "dotenv": "10.0.0",
-    "eslint": "8.5.0",
+    "cssnano": "5.0.15",
+    "dotenv": "11.0.0",
+    "eslint": "8.6.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-svelte3": "3.2.1",
+    "eslint-plugin-svelte3": "3.3.0",
     "husky": "7.0.4",
-    "jest": "27.4.5",
+    "jest": "27.4.7",
     "mdsvex": "0.9.8",
     "postcss": "8.4.5",
-    "postcss-load-config": "3.1.0",
+    "postcss-load-config": "3.1.1",
     "postcss-nested": "5.0.6",
     "prettier": "2.5.1",
     "prettier-plugin-svelte": "2.5.1",
     "remark-emoji": "3.0.2",
-    "svelte": "3.44.3",
-    "svelte-check": "2.2.11",
+    "svelte": "3.46.1",
+    "svelte-check": "2.2.12",
     "svelte-preprocess": "4.10.1",
-    "svelte-range-slider-pips": "2.0.0",
-    "tailwindcss": "3.0.7",
+    "svelte-range-slider-pips": "2.0.1",
+    "tailwindcss": "3.0.13",
     "ts-jest": "27.1.2",
     "ts-node": "10.4.0",
     "tslib": "2.3.1",
