--- a/package.json
+++ b/package.json
@@ -27,42 +27,42 @@
     "@octokit/rest": "18.12.0",
     "@sveltejs/adapter-static": "1.0.0-next.26",
     "@sveltejs/kit": "1.0.0-next.227",
-    "@tailwindcss/typography": "0.5.0",
+    "@tailwindcss/typography": "0.5.1",
     "@types/d3-path": "3.0.0",
     "@types/d3-selection": "3.0.2",
     "@types/debug": "4.1.7",
     "@types/jest": "27.4.0",
     "@types/lodash.orderby": "4.6.6",
-    "@types/node": "17.0.8",
+    "@types/node": "17.0.17",
     "@types/node-emoji": "1.8.1",
-    "@types/tailwindcss": "3.0.2",
-    "@typescript-eslint/eslint-plugin": "5.9.1",
-    "@typescript-eslint/parser": "5.9.1",
+    "@types/tailwindcss": "3.0.7",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
     "autoprefixer": "10.4.2",
-    "chalk": "4.1.2",
+    "chalk": "5.0.0",
     "cross-env": "7.0.3",
-    "cssnano": "5.0.15",
-    "dotenv": "11.0.0",
-    "eslint": "8.6.0",
+    "cssnano": "5.0.17",
+    "dotenv": "16.0.0",
+    "eslint": "8.9.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-svelte3": "3.3.0",
+    "eslint-plugin-svelte3": "3.4.0",
     "husky": "7.0.4",
-    "jest": "27.4.7",
-    "mdsvex": "0.9.8",
-    "postcss": "8.4.5",
-    "postcss-load-config": "3.1.1",
+    "jest": "27.5.1",
+    "mdsvex": "0.10.5",
+    "postcss": "8.4.6",
+    "postcss-load-config": "3.1.3",
     "postcss-nested": "5.0.6",
     "prettier": "2.5.1",
-    "prettier-plugin-svelte": "2.5.1",
+    "prettier-plugin-svelte": "2.6.0",
     "remark-emoji": "3.0.2",
-    "svelte": "3.46.1",
-    "svelte-check": "2.2.12",
-    "svelte-preprocess": "4.10.1",
-    "svelte-range-slider-pips": "2.0.1",
-    "tailwindcss": "3.0.13",
-    "ts-jest": "27.1.2",
-    "ts-node": "10.4.0",
+    "svelte": "3.46.4",
+    "svelte-check": "2.4.3",
+    "svelte-preprocess": "4.10.3",
+    "svelte-range-slider-pips": "2.0.2",
+    "tailwindcss": "3.0.22",
+    "ts-jest": "27.1.3",
+    "ts-node": "10.5.0",
     "tslib": "2.3.1",
-    "typescript": "4.5.4"
+    "typescript": "4.6.1-rc"
   }
 }
