--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "fetch:projects": "yarn cross-env DEBUG=praca:* TS_NODE_PROJECT=./tsconfig.node.json yarn node --experimental-specifier-resolution=node --loader ts-node/esm ./src/api/fetcher.ts",
     "fetch": "yarn fetch:projects",
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -24,45 +24,46 @@
     "node-emoji": "1.11.0"
   },
   "devDependencies": {
-    "@octokit/rest": "18.12.0",
-    "@sveltejs/adapter-static": "1.0.0-next.29",
-    "@sveltejs/kit": "1.0.0-next.326",
-    "@tailwindcss/typography": "0.5.2",
+    "@octokit/rest": "19.0.3",
+    "@sveltejs/adapter-static": "1.0.0-next.38",
+    "@sveltejs/kit": "1.0.0-next.398",
+    "@tailwindcss/typography": "0.5.4",
     "@types/d3-path": "3.0.0",
-    "@types/d3-selection": "3.0.2",
+    "@types/d3-selection": "3.0.3",
     "@types/debug": "4.1.7",
-    "@types/jest": "27.5.0",
+    "@types/jest": "28.1.6",
     "@types/lodash.orderby": "4.6.7",
-    "@types/node": "17.0.31",
+    "@types/node": "18.6.2",
     "@types/node-emoji": "1.8.1",
-    "@types/tailwindcss": "3.0.10",
-    "@typescript-eslint/eslint-plugin": "5.23.0",
-    "@typescript-eslint/parser": "5.23.0",
-    "autoprefixer": "10.4.7",
+    "@types/tailwindcss": "3.1.0",
+    "@typescript-eslint/eslint-plugin": "5.31.0",
+    "@typescript-eslint/parser": "5.31.0",
+    "autoprefixer": "10.4.8",
     "chalk": "5.0.1",
     "cross-env": "7.0.3",
-    "cssnano": "5.1.7",
-    "dotenv": "16.0.0",
-    "eslint": "8.15.0",
+    "cssnano": "5.1.12",
+    "dotenv": "16.0.1",
+    "eslint": "8.20.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.1",
-    "jest": "28.1.0",
-    "mdsvex": "0.10.5",
-    "postcss": "8.4.13",
-    "postcss-load-config": "3.1.4",
+    "jest": "28.1.3",
+    "mdsvex": "0.10.6",
+    "postcss": "8.4.14",
+    "postcss-load-config": "4.0.1",
     "postcss-nested": "5.0.6",
-    "prettier": "2.6.2",
+    "prettier": "2.7.1",
     "prettier-plugin-svelte": "2.7.0",
     "remark-emoji": "3.0.2",
-    "svelte": "3.48.0",
-    "svelte-check": "2.7.0",
-    "svelte-preprocess": "4.10.6",
+    "svelte": "3.49.0",
+    "svelte-check": "2.8.0",
+    "svelte-preprocess": "4.10.7",
     "svelte-range-slider-pips": "2.0.3",
-    "tailwindcss": "3.0.24",
-    "ts-jest": "28.0.2",
-    "ts-node": "10.7.0",
+    "tailwindcss": "3.1.7",
+    "ts-jest": "28.0.7",
+    "ts-node": "10.9.1",
     "tslib": "2.4.0",
-    "typescript": "4.6.4"
+    "typescript": "4.7.4",
+    "vite": "^3.0.4"
   }
 }
