--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "type": "yarn tsc --noEmit",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -26,18 +27,17 @@
   "devDependencies": {
     "@octokit/rest": "19.0.4",
     "@sveltejs/adapter-static": "1.0.0-next.43",
-    "@sveltejs/kit": "1.0.0-next.503",
+    "@sveltejs/kit": "1.0.0-next.504",
     "@tailwindcss/typography": "0.5.7",
     "@types/d3-path": "3.0.0",
     "@types/d3-selection": "3.0.3",
     "@types/debug": "4.1.7",
     "@types/jest": "29.0.3",
     "@types/lodash.orderby": "4.6.7",
-    "@types/node": "18.7.22",
+    "@types/node": "18.7.23",
     "@types/node-emoji": "1.8.2",
-    "@types/tailwindcss": "3.1.0",
-    "@typescript-eslint/eslint-plugin": "5.38.0",
-    "@typescript-eslint/parser": "5.38.0",
+    "@typescript-eslint/eslint-plugin": "5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
     "autoprefixer": "10.4.12",
     "chalk": "5.0.1",
     "cross-env": "7.0.3",
@@ -47,23 +47,23 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.1",
-    "jest": "29.0.3",
+    "jest": "29.1.1",
     "mdsvex": "0.10.6",
     "postcss": "8.4.16",
     "postcss-load-config": "4.0.1",
     "postcss-nested": "5.0.6",
     "prettier": "2.7.1",
-    "prettier-plugin-svelte": "2.7.0",
+    "prettier-plugin-svelte": "2.7.1",
     "remark-emoji": "3.0.2",
     "svelte": "3.50.1",
-    "svelte-check": "2.9.0",
+    "svelte-check": "2.9.1",
     "svelte-preprocess": "4.10.7",
     "svelte-range-slider-pips": "2.0.3",
     "tailwindcss": "3.1.8",
     "ts-jest": "29.0.2",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
-    "typescript": "4.8.3",
+    "typescript": "4.8.4",
     "vite": "^3.1.3"
   }
 }
