--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   },
   "devDependencies": {
     "@octokit/rest": "19.0.5",
-    "@sveltejs/adapter-static": "1.0.0-next.49",
-    "@sveltejs/kit": "1.0.0-next.584",
+    "@sveltejs/adapter-static": "1.0.0",
+    "@sveltejs/kit": "1.0.0",
     "@tailwindcss/typography": "0.5.8",
     "@types/d3-path": "3.0.0",
     "@types/d3-selection": "3.0.3",
     "@types/debug": "4.1.7",
     "@types/jest": "29.2.4",
     "@types/lodash.orderby": "4.6.7",
-    "@types/node": "18.11.14",
+    "@types/node": "18.11.15",
     "@types/node-emoji": "1.8.2",
     "@typescript-eslint/eslint-plugin": "5.46.1",
     "@typescript-eslint/parser": "5.46.1",
@@ -55,7 +55,7 @@
     "prettier": "2.8.1",
     "prettier-plugin-svelte": "2.9.0",
     "remark-emoji": "3.0.2",
-    "svelte": "3.54.0",
+    "svelte": "3.55.0",
     "svelte-check": "2.10.2",
     "svelte-preprocess": "5.0.0",
     "svelte-range-slider-pips": "2.1.1",
